libwebgpu/lib/lib_webgpu.h


typedef int HTML_PREDEFINED_COLOR_SPACE;
void wgpu_request_animation_frame_loop(WGPU_BOOL (*callback)(double time, void *userData), void *userData);
typedef WGpuObjectBase WGpuDevice;
typedef WGpuObjectBase WGpuBuffer;
typedef WGpuObjectBase WGpuTexture;
typedef int WGPU_TEXTURE_USAGE_FLAGS;
typedef WGpuObjectBase WGpuTextureView;
typedef int WGPU_TEXTURE_ASPECT;
typedef int WGPU_TEXTURE_FORMAT;
typedef WGpuObjectBase WGpuCommandBuffer;
typedef WGpuObjectBase WGpuRenderPassEncoder;
void wgpu_render_pass_encoder_execute_bundles(WGpuRenderPassEncoder encoder, const WGpuRenderBundle *bundles, int numBundles);
typedef struct WGpuRenderPassDepthStencilAttachment
{
  WGpuTextureView view;
  WGPU_LOAD_OP depthLoadOp; 
  float depthClearValue;
  WGPU_STORE_OP depthStoreOp;
  WGPU_BOOL depthReadOnly;
  WGPU_LOAD_OP stencilLoadOp;  
  uint32_t stencilClearValue;
  WGPU_STORE_OP stencilStoreOp;
  WGPU_BOOL stencilReadOnly;
} WGpuRenderPassDepthStencilAttachment;
extern const WGpuRenderPassDepthStencilAttachment WGPU_RENDER_PASS_DEPTH_STENCIL_ATTACHMENT_DEFAULT_INITIALIZER;
typedef int WGPU_LOAD_OP;
typedef int WGPU_STORE_OP;
typedef WGpuObjectBase WGpuRenderBundle;
WGPU_BOOL wgpu_is_render_bundle(WGpuObjectBase object);
WGPU_BOOL wgpu_is_render_bundle_encoder(WGpuObjectBase object);
typedef WGpuObjectBase WGpuQueue;
WGPU_BOOL wgpu_is_queue(WGpuObjectBase object);
void wgpu_queue_submit_one_and_destroy(WGpuQueue queue, WGpuCommandBuffer commandBuffer);
void wgpu_queue_submit_multiple_and_destroy(WGpuQueue queue, const WGpuCommandBuffer *commandBuffers, int numCommandBuffers);
typedef void (*WGpuOnSubmittedWorkDoneCallback)(WGpuQueue queue, void *userData);
void wgpu_queue_set_on_submitted_work_done_callback(WGpuQueue queue, WGpuOnSubmittedWorkDoneCallback callback, void *userData);
void wgpu_queue_write_buffer(WGpuQueue queue, WGpuBuffer buffer, double_int53_t bufferOffset, const void *data NOTNULL, double_int53_t size);
void wgpu_queue_write_texture(WGpuQueue queue, const WGpuImageCopyTexture *destination NOTNULL, const void *data NOTNULL, uint32_t bytesPerBlockRow, uint32_t blockRowsPerImage, uint32_t writeWidth, uint32_t writeHeight _WGPU_DEFAULT_VALUE(1), uint32_t writeDepthOrArrayLayers _WGPU_DEFAULT_VALUE(1));
void wgpu_queue_copy_external_image_to_texture(WGpuQueue queue, const WGpuImageCopyExternalImage *source NOTNULL, const WGpuImageCopyTextureTagged *destination NOTNULL, uint32_t copyWidth, uint32_t copyHeight _WGPU_DEFAULT_VALUE(1), uint32_t copyDepthOrArrayLayers _WGPU_DEFAULT_VALUE(1));
typedef WGpuObjectBase WGpuQuerySet;
WGPU_BOOL wgpu_is_query_set(WGpuObjectBase object);
WGPU_QUERY_TYPE wgpu_query_set_type(WGpuQuerySet querySet);
uint32_t wgpu_query_set_count(WGpuQuerySet querySet);
typedef int WGPU_QUERY_TYPE;
typedef WGpuObjectBase WGpuCanvasContext;
WGPU_BOOL wgpu_is_canvas_context(WGpuObjectBase object);
void wgpu_canvas_context_configure(WGpuCanvasContext canvasContext, const WGpuCanvasConfiguration *config NOTNULL);
void wgpu_canvas_context_configure(WGpuCanvasContext canvasContext, const WGpuCanvasConfiguration *config NOTNULL, int width _WGPU_DEFAULT_VALUE(0), int height _WGPU_DEFAULT_VALUE(0));
void wgpu_canvas_context_unconfigure(WGpuCanvasContext canvasContext);
WGpuTexture wgpu_canvas_context_get_current_texture(WGpuCanvasContext canvasContext);
#define wgpu_canvas_context_get_current_texture_view(canvasContext) wgpu_texture_create_view_simple(wgpu_canvas_context_get_current_texture((canvasContext)))
WGpuTextureView wgpu_canvas_context_get_current_texture_view(WGpuCanvasContext canvasContext);
void wgpu_canvas_context_present(WGpuCanvasContext canvasContext) __attribute__((deprecated("The function wgpu_canvas_context_present() is not available when targeting the web. Presentation always occurs when yielding out from browser event loop. Refactor the code to avoid any blocking render loop and calling wgpu_canvas_context_present() when targeting web browsers.", "Use emscripten_request_animation_frame_loop() instead.")));
void wgpu_canvas_context_present(WGpuCanvasContext canvasContext);
typedef int WGPU_CANVAS_ALPHA_MODE;
typedef int WGPU_DEVICE_LOST_REASON;
typedef void (*WGpuDeviceLostCallback)(WGpuDevice device, WGPU_DEVICE_LOST_REASON deviceLostReason, const char *message NOTNULL, void *userData);
void wgpu_device_set_lost_callback(WGpuDevice device, WGpuDeviceLostCallback callback, void *userData);
typedef struct WGpuOrigin2D
{
  int x, y;
} WGpuOrigin2D;
typedef struct WGpuOrigin3D
{
  int x, y, z;
} WGpuOrigin3D;
typedef struct WGpuCanvasToneMapping
{
  WGPU_CANVAS_TONE_MAPPING_MODE mode; 
} WGpuCanvasToneMapping;
typedef struct _WGPU_ALIGN_TO_64BITS WGpuCanvasConfiguration
{
  WGpuDevice device;
  WGPU_TEXTURE_FORMAT format;
  WGPU_TEXTURE_USAGE_FLAGS usage;
  int numViewFormats;
  WGPU_TEXTURE_FORMAT *viewFormats;
  _WGPU_PTR_PADDING(0);
  HTML_PREDEFINED_COLOR_SPACE colorSpace;
  WGpuCanvasToneMapping toneMapping;
  WGPU_CANVAS_ALPHA_MODE alphaMode;
  uint32_t unused_padding;
} WGpuCanvasConfiguration;
typedef struct WGpuImageCopyExternalImage
{
  WGpuObjectBase source; 
  WGpuOrigin2D origin;
  WGPU_BOOL flipY; 
} WGpuImageCopyExternalImage;
typedef struct WGpuImageCopyTexture
{
  WGpuTexture texture;
  uint32_t mipLevel;
  WGpuOrigin3D origin;
  WGPU_TEXTURE_ASPECT aspect;
} WGpuImageCopyTexture;
typedef struct WGpuImageCopyTextureTagged
{
  WGpuTexture texture;
  uint32_t mipLevel;
  WGpuOrigin3D origin;
  WGPU_TEXTURE_ASPECT aspect;
  HTML_PREDEFINED_COLOR_SPACE colorSpace; 
  WGPU_BOOL premultipliedAlpha; 
} WGpuImageCopyTextureTagged;