lib/ffi/ffi_webgpu.dart


  late final _wgpu_render_pass_encoder_execute_bundlesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuRenderPassEncoder,
              ffi.Pointer<WGpuRenderBundle>,
              ffi.Int)>>('wgpu_render_pass_encoder_execute_bundles');
  late final _wgpu_render_pass_encoder_execute_bundles =
      _wgpu_render_pass_encoder_execute_bundlesPtr.asFunction<
          void Function(
              WGpuRenderPassEncoder, ffi.Pointer<WGpuRenderBundle>, int)>();

  late final ffi.Pointer<WGpuRenderPassDepthStencilAttachment>
      _WGPU_RENDER_PASS_DEPTH_STENCIL_ATTACHMENT_DEFAULT_INITIALIZER =
      _lookup<WGpuRenderPassDepthStencilAttachment>(
          'WGPU_RENDER_PASS_DEPTH_STENCIL_ATTACHMENT_DEFAULT_INITIALIZER');

  WGpuRenderPassDepthStencilAttachment
      get WGPU_RENDER_PASS_DEPTH_STENCIL_ATTACHMENT_DEFAULT_INITIALIZER =>
          _WGPU_RENDER_PASS_DEPTH_STENCIL_ATTACHMENT_DEFAULT_INITIALIZER.ref;

  int wgpu_is_render_bundle(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_render_bundle(
      object,
    );
  }

  late final _wgpu_is_render_bundlePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_render_bundle');
  late final _wgpu_is_render_bundle =
      _wgpu_is_render_bundlePtr.asFunction<int Function(WGpuObjectBase)>();

  int wgpu_is_render_bundle_encoder(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_render_bundle_encoder(
      object,
    );
  }

  late final _wgpu_is_render_bundle_encoderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_render_bundle_encoder');
  late final _wgpu_is_render_bundle_encoder = _wgpu_is_render_bundle_encoderPtr
      .asFunction<int Function(WGpuObjectBase)>();

  int wgpu_is_queue(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_queue(
      object,
    );
  }

  late final _wgpu_is_queuePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_queue');
  late final _wgpu_is_queue =
      _wgpu_is_queuePtr.asFunction<int Function(WGpuObjectBase)>();

  void wgpu_queue_submit_one_and_destroy(
    WGpuQueue queue,
    WGpuCommandBuffer commandBuffer,
  ) {
    return _wgpu_queue_submit_one_and_destroy(
      queue,
      commandBuffer,
    );
  }

  late final _wgpu_queue_submit_one_and_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(WGpuQueue, WGpuCommandBuffer)>>(
      'wgpu_queue_submit_one_and_destroy');
  late final _wgpu_queue_submit_one_and_destroy =
      _wgpu_queue_submit_one_and_destroyPtr
          .asFunction<void Function(WGpuQueue, WGpuCommandBuffer)>();

  void wgpu_queue_submit_multiple_and_destroy(
    WGpuQueue queue,
    ffi.Pointer<WGpuCommandBuffer> commandBuffers,
    int numCommandBuffers,
  ) {
    return _wgpu_queue_submit_multiple_and_destroy(
      queue,
      commandBuffers,
      numCommandBuffers,
    );
  }

  late final _wgpu_queue_submit_multiple_and_destroyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(WGpuQueue, ffi.Pointer<WGpuCommandBuffer>,
              ffi.Int)>>('wgpu_queue_submit_multiple_and_destroy');
  late final _wgpu_queue_submit_multiple_and_destroy =
      _wgpu_queue_submit_multiple_and_destroyPtr.asFunction<
          void Function(WGpuQueue, ffi.Pointer<WGpuCommandBuffer>, int)>();

  void wgpu_queue_set_on_submitted_work_done_callback(
    WGpuQueue queue,
    WGpuOnSubmittedWorkDoneCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wgpu_queue_set_on_submitted_work_done_callback(
      queue,
      callback,
      userData,
    );
  }

  late final _wgpu_queue_set_on_submitted_work_done_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(WGpuQueue, WGpuOnSubmittedWorkDoneCallback,
                  ffi.Pointer<ffi.Void>)>>(
      'wgpu_queue_set_on_submitted_work_done_callback');
  late final _wgpu_queue_set_on_submitted_work_done_callback =
      _wgpu_queue_set_on_submitted_work_done_callbackPtr.asFunction<
          void Function(WGpuQueue, WGpuOnSubmittedWorkDoneCallback,
              ffi.Pointer<ffi.Void>)>();

  void wgpu_queue_write_buffer(
    WGpuQueue queue,
    WGpuBuffer buffer,
    int bufferOffset,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    return _wgpu_queue_write_buffer(
      queue,
      buffer,
      bufferOffset,
      data,
      size,
    );
  }

  late final _wgpu_queue_write_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuQueue,
              WGpuBuffer,
              double_int53_t,
              ffi.Pointer<ffi.Void>,
              double_int53_t)>>('wgpu_queue_write_buffer');
  late final _wgpu_queue_write_buffer = _wgpu_queue_write_bufferPtr.asFunction<
      void Function(WGpuQueue, WGpuBuffer, int, ffi.Pointer<ffi.Void>, int)>();

  void wgpu_queue_write_texture(
    WGpuQueue queue,
    ffi.Pointer<WGpuImageCopyTexture> destination,
    ffi.Pointer<ffi.Void> data,
    int bytesPerBlockRow,
    int blockRowsPerImage,
    int writeWidth,
    int writeHeight,
    int writeDepthOrArrayLayers,
  ) {
    return _wgpu_queue_write_texture(
      queue,
      destination,
      data,
      bytesPerBlockRow,
      blockRowsPerImage,
      writeWidth,
      writeHeight,
      writeDepthOrArrayLayers,
    );
  }

  late final _wgpu_queue_write_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuQueue,
              ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Pointer<ffi.Void>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32)>>('wgpu_queue_write_texture');
  late final _wgpu_queue_write_texture =
      _wgpu_queue_write_texturePtr.asFunction<
          void Function(WGpuQueue, ffi.Pointer<WGpuImageCopyTexture>,
              ffi.Pointer<ffi.Void>, int, int, int, int, int)>();

  void wgpu_queue_copy_external_image_to_texture(
    WGpuQueue queue,
    ffi.Pointer<WGpuImageCopyExternalImage> source,
    ffi.Pointer<WGpuImageCopyTextureTagged> destination,
    int copyWidth,
    int copyHeight,
    int copyDepthOrArrayLayers,
  ) {
    return _wgpu_queue_copy_external_image_to_texture(
      queue,
      source,
      destination,
      copyWidth,
      copyHeight,
      copyDepthOrArrayLayers,
    );
  }

  late final _wgpu_queue_copy_external_image_to_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuQueue,
              ffi.Pointer<WGpuImageCopyExternalImage>,
              ffi.Pointer<WGpuImageCopyTextureTagged>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32)>>('wgpu_queue_copy_external_image_to_texture');
  late final _wgpu_queue_copy_external_image_to_texture =
      _wgpu_queue_copy_external_image_to_texturePtr.asFunction<
          void Function(WGpuQueue, ffi.Pointer<WGpuImageCopyExternalImage>,
              ffi.Pointer<WGpuImageCopyTextureTagged>, int, int, int)>();

  int wgpu_is_query_set(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_query_set(
      object,
    );
  }

  late final _wgpu_is_query_setPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_query_set');
  late final _wgpu_is_query_set =
      _wgpu_is_query_setPtr.asFunction<int Function(WGpuObjectBase)>();

  int wgpu_query_set_type(
    WGpuQuerySet querySet,
  ) {
    return _wgpu_query_set_type(
      querySet,
    );
  }

  late final _wgpu_query_set_typePtr =
      _lookup<ffi.NativeFunction<WGPU_QUERY_TYPE Function(WGpuQuerySet)>>(
          'wgpu_query_set_type');
  late final _wgpu_query_set_type =
      _wgpu_query_set_typePtr.asFunction<int Function(WGpuQuerySet)>();

  int wgpu_query_set_count(
    WGpuQuerySet querySet,
  ) {
    return _wgpu_query_set_count(
      querySet,
    );
  }

  late final _wgpu_query_set_countPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(WGpuQuerySet)>>(
          'wgpu_query_set_count');
  late final _wgpu_query_set_count =
      _wgpu_query_set_countPtr.asFunction<int Function(WGpuQuerySet)>();

  int wgpu_is_canvas_context(
    WGpuObjectBase object,
  ) {
    return _wgpu_is_canvas_context(
      object,
    );
  }

  late final _wgpu_is_canvas_contextPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(WGpuObjectBase)>>(
          'wgpu_is_canvas_context');
  late final _wgpu_is_canvas_context =
      _wgpu_is_canvas_contextPtr.asFunction<int Function(WGpuObjectBase)>();

  void wgpu_canvas_context_configure(
    WGpuCanvasContext canvasContext,
    ffi.Pointer<WGpuCanvasConfiguration> config,
    int width,
    int height,
  ) {
    return _wgpu_canvas_context_configure(
      canvasContext,
      config,
      width,
      height,
    );
  }

  late final _wgpu_canvas_context_configurePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              WGpuCanvasContext,
              ffi.Pointer<WGpuCanvasConfiguration>,
              ffi.Int,
              ffi.Int)>>('wgpu_canvas_context_configure');
  late final _wgpu_canvas_context_configure =
      _wgpu_canvas_context_configurePtr.asFunction<
          void Function(WGpuCanvasContext, ffi.Pointer<WGpuCanvasConfiguration>,
              int, int)>();

  void wgpu_canvas_context_unconfigure(
    WGpuCanvasContext canvasContext,
  ) {
    return _wgpu_canvas_context_unconfigure(
      canvasContext,
    );
  }

  late final _wgpu_canvas_context_unconfigurePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuCanvasContext)>>(
          'wgpu_canvas_context_unconfigure');
  late final _wgpu_canvas_context_unconfigure =
      _wgpu_canvas_context_unconfigurePtr
          .asFunction<void Function(WGpuCanvasContext)>();

  WGpuTexture wgpu_canvas_context_get_current_texture(
    WGpuCanvasContext canvasContext,
  ) {
    return _wgpu_canvas_context_get_current_texture(
      canvasContext,
    );
  }

  late final _wgpu_canvas_context_get_current_texturePtr =
      _lookup<ffi.NativeFunction<WGpuTexture Function(WGpuCanvasContext)>>(
          'wgpu_canvas_context_get_current_texture');
  late final _wgpu_canvas_context_get_current_texture =
      _wgpu_canvas_context_get_current_texturePtr
          .asFunction<WGpuTexture Function(WGpuCanvasContext)>();

  WGpuTextureView wgpu_canvas_context_get_current_texture_view(
    WGpuCanvasContext canvasContext,
  ) {
    return _wgpu_canvas_context_get_current_texture_view(
      canvasContext,
    );
  }

  late final _wgpu_canvas_context_get_current_texture_viewPtr =
      _lookup<ffi.NativeFunction<WGpuTextureView Function(WGpuCanvasContext)>>(
          'wgpu_canvas_context_get_current_texture_view');
  late final _wgpu_canvas_context_get_current_texture_view =
      _wgpu_canvas_context_get_current_texture_viewPtr
          .asFunction<WGpuTextureView Function(WGpuCanvasContext)>();

  void wgpu_canvas_context_present(
    WGpuCanvasContext canvasContext,
  ) {
    return _wgpu_canvas_context_present(
      canvasContext,
    );
  }

  late final _wgpu_canvas_context_presentPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WGpuCanvasContext)>>(
          'wgpu_canvas_context_present');
  late final _wgpu_canvas_context_present = _wgpu_canvas_context_presentPtr
      .asFunction<void Function(WGpuCanvasContext)>();

  void wgpu_device_set_lost_callback(
    WGpuDevice device,
    WGpuDeviceLostCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _wgpu_device_set_lost_callback(
      device,
      callback,
      userData,
    );
  }
